--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,3 +1,8 @@
-body {
-  background-color: whitesmoke;
+body, html {
+  padding:0;
+  margin:0;
+  width:100%;
+  height:100%;
+  max-width: 500px;
+  overflow: hidden;
 }
