--- a/src/components/style.css
+++ b/src/components/style.css
@@ -9,3 +9,7 @@ body, html {
   width:100%;
   height:100%;
 }
+
+* {
+  font-family: var(--rcx-font-family-sans,Inter,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Helvetica Neue","Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Meiryo UI",Arial,sans-serif);
+}
